--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get: ^4.6.6
   url_launcher: ^6.3.0
   marquee_list: ^1.0.0
+  video_player: ^2.9.1
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +67,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - videos/
     - jsonfiles/
+    - assets/videos/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
