--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   url_launcher: ^6.3.0
   marquee_list: ^1.0.0
   video_player: ^2.9.1
+  path_provider: ^2.0.11
+  dio: ^5.6.0
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,8 @@ flutter:
     - jsonfiles/
     - assets/videos/
     - assets/images/
+    - assets/marimuthuKannayiram.pdf
+    - marimuthuKannayiram.pdf
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
