--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,12 @@ dependencies:
 
   # flutter state management.
   get: ^4.6.6
-  url_launcher: ^6.3.0
+  url_launcher: ^6.3.1
   marquee_list: ^1.0.0
   video_player: ^2.9.1
   path_provider: ^2.0.11
   dio: ^5.6.0
+  flutter_email_sender: ^6.0.3
 
 dev_dependencies:
   flutter_test:
